# luascan

./: Cargo.toml  README.md
src/: cli.rs  config.rs  error.rs  lsp.rs  main.rs  parser.rs  workspace.rs
tests/sample_workspace/: init.lua
tests/sample_workspace/ui/: init.lua  utils.lua
